--- a/StudyBuddy/MyApplication/app/src/main/res/layout/activity_sign_up.xml
+++ b/StudyBuddy/MyApplication/app/src/main/res/layout/activity_sign_up.xml
@@ -35,7 +35,7 @@
                 android:layout_height="match_parent">
 
                 <EditText
-                    android:id="@+id/editText6"
+                    android:id="@+id/FirstName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -49,6 +49,7 @@
                     android:layout_weight="1">
 
                     <EditText
+                        android:id="@+id/lastName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Last Name" />
@@ -94,7 +95,7 @@
                 android:layout_height="match_parent">
 
                 <EditText
-                    android:id="@+id/password"
+                    android:id="@+id/password2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Confirm Password"
@@ -142,7 +143,7 @@
 
             <Button
                 android:id="@+id/email_sign_in_button"
-                style="?android:textAppearanceSmall"
+                style="@style/Widget.AppCompat.Button.Small"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
