Sign up now inserts into DB

--- a/StudyBuddy/MyApplication/app/src/main/res/layout/activity_sign_up.xml
+++ b/StudyBuddy/MyApplication/app/src/main/res/layout/activity_sign_up.xml
@@ -35,7 +35,7 @@
                 android:layout_height="match_parent">
 
                 <EditText
-                    android:id="@+id/FirstName"
+                    android:id="@+id/firstName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -114,7 +114,7 @@
                 android:layout_height="match_parent">
 
                 <EditText
-                    android:id="@+id/editText8"
+                    android:id="@+id/university"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -130,7 +130,7 @@
                 android:layout_height="match_parent">
 
                 <EditText
-                    android:id="@+id/editText9"
+                    android:id="@+id/major"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
