--- a/StudyBuddy/MyApplication/app/src/main/res/layout/activity_main2.xml
+++ b/StudyBuddy/MyApplication/app/src/main/res/layout/activity_main2.xml
@@ -25,8 +25,242 @@
         android:layout_weight="1">
 
         <TableLayout
+            android:id="@+id/addGroupLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="visible">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/myCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardBackgroundColor="?attr/colorButtonNormal"
+                    app:cardElevation="5dp"
+                    app:contentPadding="5dp">
+
+                    <TableLayout
+                        android:id="@+id/groupTable"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:paddingLeft="8dp">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="140dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBaseline="@+id/myName"
+                                android:layout_alignBottom="@+id/myName"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true"
+                                android:width="100dp"
+                                android:text="Group Description"
+                                android:textSize="14sp"
+                                tools:text="Group Description" />
+
+                            <EditText
+                                android:id="@+id/groupDescription"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:inputType="textPersonName"
+                                android:text="description"
+                                tools:text="description" />
+
+                        </TableRow>
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:paddingLeft="8dp">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="140dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBaseline="@+id/myName"
+                                android:layout_alignBottom="@+id/myName"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true"
+                                android:width="100dp"
+                                android:text="Meet Time"
+                                android:textSize="14sp"
+                                tools:text="Meet Time" />
+
+                            <EditText
+                                android:id="@+id/groupMeetTime"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:inputType="textPersonName"
+                                android:text="time"
+                                tools:text="time" />
+
+                        </TableRow>
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:paddingLeft="8dp">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="140dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBaseline="@+id/myName"
+                                android:layout_alignBottom="@+id/myName"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true"
+                                android:width="100dp"
+                                android:text="Meet Location"
+                                android:textSize="14sp"
+                                tools:text="Meet Location" />
+
+                            <EditText
+                                android:id="@+id/groupMeetLocation"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:ems="10"
+                                android:inputType="textPersonName"
+                                android:text="location"
+                                tools:text="location" />
+
+                        </TableRow>
+
+                    </TableLayout>
+
+                </android.support.v7.widget.CardView>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/myCard"
+                    android:layout_width="374dp"
+                    android:layout_height="match_parent"
+                    app:cardBackgroundColor="?attr/colorButtonNormal"
+                    app:cardElevation="5dp"
+                    app:contentPadding="5dp">
+
+                    <TableLayout
+                        android:id="@+id/addGroupLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="visible">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginBottom="10dp">
+
+                            <Button
+                                android:id="@+id/cancelAddGroup"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Cancel" />
+
+                            <Button
+                                android:id="@+id/addGroup"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Add" />
+                        </TableRow>
+
+                    </TableLayout>
+
+                </android.support.v7.widget.CardView>
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:id="@+id/groupLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/myCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardBackgroundColor="?attr/colorButtonNormal"
+                    app:cardElevation="5dp"
+                    app:contentPadding="5dp">
+
+                    <TableLayout
+                        android:id="@+id/groupTable"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:paddingLeft="8dp">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="121dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignBaseline="@+id/myName"
+                                android:layout_alignBottom="@+id/myName"
+                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true"
+                                android:width="100dp"
+                                android:text="Groups"
+                                android:textSize="32sp"
+                                tools:text="Groups" />
+
+                        </TableRow>
+
+                    </TableLayout>
+
+                </android.support.v7.widget.CardView>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="10dp">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/myCard"
+                    android:layout_width="374dp"
+                    android:layout_height="match_parent"
+                    app:cardBackgroundColor="?attr/colorButtonNormal"
+                    app:cardElevation="5dp"
+                    app:contentPadding="5dp">
+
+                    <Button
+                        android:id="@+id/createGroup"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Create Group" />
+                </android.support.v7.widget.CardView>
+            </TableRow>
+
+        </TableLayout>
+
+        <TableLayout
+            android:id="@+id/homeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible">
 
             <TableRow
                 android:layout_width="match_parent"
