--- a/StudyBuddy/MyApplication/app/src/main/res/layout/activity_main2.xml
+++ b/StudyBuddy/MyApplication/app/src/main/res/layout/activity_main2.xml
@@ -28,7 +28,7 @@
             android:id="@+id/addGroupLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible">
+            android:visibility="invisible">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -260,7 +260,7 @@
             android:id="@+id/homeLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="invisible">
+            android:visibility="visible">
 
             <TableRow
                 android:layout_width="match_parent"
@@ -485,32 +485,51 @@
                     app:cardElevation="5dp"
                     app:contentPadding="5dp">
 
-                    <TableLayout
-                        android:id="@+id/groupTable"
+                    <ScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="200dp">
 
-                        <TableRow
+                        <LinearLayout
+                            android:id="@+id/groupTable"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:paddingLeft="8dp">
+                            android:layout_height="100dp"
+                            android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/textView3"
-                                android:layout_width="121dp"
+                                android:id="@+id/textView8"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_alignBaseline="@+id/myName"
-                                android:layout_alignBottom="@+id/myName"
-                                android:layout_alignParentLeft="true"
-                                android:layout_alignParentStart="true"
-                                android:width="100dp"
                                 android:text="Groups"
                                 android:textSize="32sp"
                                 tools:text="Groups" />
 
-                        </TableRow>
+                            <TextView
+                                android:id="@+id/group1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="24sp"
+                                tools:text="You're in no groups yet :-(" />
 
-                    </TableLayout>
+                            <TextView
+                                android:id="@+id/group2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="24sp" />
+
+                            <TextView
+                                android:id="@+id/group3"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="24sp" />
+
+                            <TextView
+                                android:id="@+id/group4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="24sp" />
+
+                        </LinearLayout>
+                    </ScrollView>
 
                 </android.support.v7.widget.CardView>
             </TableRow>
